--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     volumes:
+      - .:/app
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     expose:
@@ -16,25 +17,13 @@ services:
     restart: unless-stopped
 
   db:
-    image: postgres:17-alpine
+    image: postgres:16-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
-    restart: unless-stopped
-
-  nginx:
-    image: nginx:alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-    ports:
-      - "8080:80"
-    depends_on:
-      - web
     restart: unless-stopped
 
 volumes:
