--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pillow = "==11.3.0"
 psycopg2-binary = "==2.9.10"
 python-decouple = "==3.8"
 sqlparse = "==0.5.3"
+dj-database-url = "*"
 
 [dev-packages]
 
